--- a/AncientEgypt/Modules/Menu/Base.lproj/MainMenu.storyboard
+++ b/AncientEgypt/Modules/Menu/Base.lproj/MainMenu.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Ggx-63-7HX">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22130"/>
@@ -172,6 +172,117 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="84.732824427480907" y="-2.1126760563380285"/>
+        </scene>
+        <!--Tutorial View-->
+        <scene sceneID="lUO-mx-hWG">
+            <objects>
+                <viewController storyboardIdentifier="tutorialView" id="Ggx-63-7HX" customClass="TutorialView" customModule="AncientEgypt" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="mjA-YH-xFC">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vPU-5I-Rxc">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="get-qF-e19">
+                                <rect key="frame" x="25" y="74" width="45" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="45" id="ld1-mB-Lle"/>
+                                    <constraint firstAttribute="height" constant="45" id="usC-oC-pCx"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UXq-t7-2bp">
+                                <rect key="frame" x="228" y="74" width="150" height="45"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oOe-0w-ZDe">
+                                        <rect key="frame" x="0.0" y="0.0" width="150" height="45"/>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MH7-RT-fIQ">
+                                        <rect key="frame" x="95" y="12.666666666666671" width="20" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="20" id="dbW-qe-NaL"/>
+                                            <constraint firstAttribute="width" constant="20" id="tUc-U8-xLC"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fyh-6H-Dxq">
+                                        <rect key="frame" x="46" y="10" width="44" height="25"/>
+                                        <fontDescription key="fontDescription" name="Sigmar-Regular" family="Sigmar" pointSize="15"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="MH7-RT-fIQ" secondAttribute="trailing" constant="35" id="6Dg-Om-B80"/>
+                                    <constraint firstAttribute="height" constant="45" id="IDH-CP-UXZ"/>
+                                    <constraint firstItem="oOe-0w-ZDe" firstAttribute="leading" secondItem="UXq-t7-2bp" secondAttribute="leading" id="JyS-qL-xt9"/>
+                                    <constraint firstAttribute="trailing" secondItem="oOe-0w-ZDe" secondAttribute="trailing" id="QIW-uN-fQP"/>
+                                    <constraint firstItem="MH7-RT-fIQ" firstAttribute="leading" secondItem="Fyh-6H-Dxq" secondAttribute="trailing" constant="5" id="cNU-gm-36b"/>
+                                    <constraint firstItem="Fyh-6H-Dxq" firstAttribute="centerY" secondItem="UXq-t7-2bp" secondAttribute="centerY" id="d2E-Qp-0za"/>
+                                    <constraint firstAttribute="bottom" secondItem="oOe-0w-ZDe" secondAttribute="bottom" id="jWq-Jc-Ozu"/>
+                                    <constraint firstItem="oOe-0w-ZDe" firstAttribute="top" secondItem="UXq-t7-2bp" secondAttribute="top" id="mj0-q7-F4N"/>
+                                    <constraint firstItem="MH7-RT-fIQ" firstAttribute="centerY" secondItem="UXq-t7-2bp" secondAttribute="centerY" id="yx2-k5-UyZ"/>
+                                    <constraint firstAttribute="width" constant="150" id="ztL-hi-9gW"/>
+                                </constraints>
+                            </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Qb7-gG-3LL">
+                                <rect key="frame" x="10" y="139" width="373" height="574"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="JGK-r2-fMr">
+                                <rect key="frame" x="0.0" y="572" width="250" height="280"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="250" id="Bd5-PH-FgI"/>
+                                    <constraint firstAttribute="height" constant="280" id="JUl-h8-v0E"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xdd-ka-FKh">
+                                <rect key="frame" x="106.66666666666669" y="728" width="180" height="70"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="DfU-Fb-ea9"/>
+                                    <constraint firstAttribute="width" constant="180" id="NXh-u8-2PD"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <connections>
+                                    <action selector="skipTutorialSender:" destination="Ggx-63-7HX" eventType="touchUpInside" id="PcC-hl-FlQ"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="gwl-tE-Rmx"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="gwl-tE-Rmx" firstAttribute="trailing" secondItem="Qb7-gG-3LL" secondAttribute="trailing" constant="10" id="6oh-xr-ht9"/>
+                            <constraint firstItem="Qb7-gG-3LL" firstAttribute="leading" secondItem="gwl-tE-Rmx" secondAttribute="leading" constant="10" id="7Ut-uo-gBx"/>
+                            <constraint firstItem="vPU-5I-Rxc" firstAttribute="leading" secondItem="gwl-tE-Rmx" secondAttribute="leading" id="APj-Lh-9ei"/>
+                            <constraint firstItem="Qb7-gG-3LL" firstAttribute="top" secondItem="UXq-t7-2bp" secondAttribute="bottom" constant="20" id="FZD-LP-al3"/>
+                            <constraint firstAttribute="bottom" secondItem="JGK-r2-fMr" secondAttribute="bottom" id="JFj-Wn-NGc"/>
+                            <constraint firstItem="UXq-t7-2bp" firstAttribute="top" secondItem="gwl-tE-Rmx" secondAttribute="top" constant="15" id="Ju7-Dm-jRw"/>
+                            <constraint firstAttribute="bottom" secondItem="vPU-5I-Rxc" secondAttribute="bottom" id="MXU-oa-qOA"/>
+                            <constraint firstItem="gwl-tE-Rmx" firstAttribute="bottom" secondItem="xdd-ka-FKh" secondAttribute="bottom" constant="20" id="QWZ-bm-RhQ"/>
+                            <constraint firstItem="xdd-ka-FKh" firstAttribute="top" secondItem="Qb7-gG-3LL" secondAttribute="bottom" constant="15" id="VGe-2b-NeV"/>
+                            <constraint firstItem="vPU-5I-Rxc" firstAttribute="trailing" secondItem="gwl-tE-Rmx" secondAttribute="trailing" id="VV2-wv-uZb"/>
+                            <constraint firstItem="get-qF-e19" firstAttribute="leading" secondItem="gwl-tE-Rmx" secondAttribute="leading" constant="25" id="Wao-d2-dgZ"/>
+                            <constraint firstItem="get-qF-e19" firstAttribute="top" secondItem="gwl-tE-Rmx" secondAttribute="top" constant="15" id="XxM-MG-tIS"/>
+                            <constraint firstItem="gwl-tE-Rmx" firstAttribute="trailing" secondItem="UXq-t7-2bp" secondAttribute="trailing" constant="15" id="lbt-Et-EMf"/>
+                            <constraint firstItem="JGK-r2-fMr" firstAttribute="leading" secondItem="mjA-YH-xFC" secondAttribute="leading" id="nXU-f2-oJH"/>
+                            <constraint firstItem="xdd-ka-FKh" firstAttribute="centerX" secondItem="mjA-YH-xFC" secondAttribute="centerX" id="qAx-xc-WNA"/>
+                            <constraint firstItem="vPU-5I-Rxc" firstAttribute="top" secondItem="mjA-YH-xFC" secondAttribute="top" id="rt1-3a-ZwH"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="allCoinsLabel" destination="Fyh-6H-Dxq" id="QZL-j2-Zlq"/>
+                        <outlet property="ancientCoinImageView" destination="MH7-RT-fIQ" id="CoZ-OH-zTP"/>
+                        <outlet property="bottomLeftImageView" destination="JGK-r2-fMr" id="MqV-Yl-F4K"/>
+                        <outlet property="coinsImageView" destination="oOe-0w-ZDe" id="dVh-Ql-wkY"/>
+                        <outlet property="menuBtn" destination="get-qF-e19" id="wGG-k9-Yet"/>
+                        <outlet property="skipTutorialBtn" destination="xdd-ka-FKh" id="VP2-Wd-c0b"/>
+                        <outlet property="tutorialBackground" destination="vPU-5I-Rxc" id="nQK-ka-QPg"/>
+                        <outlet property="tutorialImageView" destination="Qb7-gG-3LL" id="tbb-ag-eRL"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="os9-hj-eda" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="829.7709923664122" y="-2.1126760563380285"/>
         </scene>
     </scenes>
     <resources>
