--- a/AncientEgypt/Modules/Menu/Base.lproj/MainMenu.storyboard
+++ b/AncientEgypt/Modules/Menu/Base.lproj/MainMenu.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Ggx-63-7HX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22130"/>
@@ -16,7 +16,7 @@
         <!--Main Menu View-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="MainMenuView" customModule="AncientEgypt" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="mainMenuView" id="BYZ-38-t0r" customClass="MainMenuView" customModule="AncientEgypt" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="800"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -37,6 +37,9 @@
                                                     <constraint firstAttribute="height" constant="45" id="YVK-wN-ZRn"/>
                                                 </constraints>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <connections>
+                                                    <action selector="tutorialSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tM3-4z-51t"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hKv-Qb-K8v">
                                                 <rect key="frame" x="323" y="20" width="45" height="45"/>
@@ -67,6 +70,9 @@
                                                     <constraint firstAttribute="height" constant="70" id="r25-J6-vkl"/>
                                                 </constraints>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <connections>
+                                                    <action selector="leadersSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="aDD-Oa-jq1"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3On-zk-VGw">
                                                 <rect key="frame" x="101.66666666666669" y="530" width="190" height="70"/>
@@ -191,6 +197,9 @@
                                     <constraint firstAttribute="height" constant="45" id="usC-oC-pCx"/>
                                 </constraints>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <connections>
+                                    <action selector="menuSender:" destination="Ggx-63-7HX" eventType="touchUpInside" id="bb8-5Q-jEx"/>
+                                </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UXq-t7-2bp">
                                 <rect key="frame" x="228" y="74" width="150" height="45"/>
@@ -283,6 +292,120 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="os9-hj-eda" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="829.7709923664122" y="-2.1126760563380285"/>
+        </scene>
+        <!--Leaders View-->
+        <scene sceneID="68e-TY-Xld">
+            <objects>
+                <viewController storyboardIdentifier="leadersView" id="9Vj-MI-BJa" customClass="LeadersView" customModule="AncientEgypt" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="aZ5-sD-EfY">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OD8-1z-mjs">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HeL-yT-Blw">
+                                <rect key="frame" x="25" y="74" width="45" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="45" id="y4l-3J-v9L"/>
+                                    <constraint firstAttribute="height" constant="45" id="z2h-aQ-EPj"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <connections>
+                                    <action selector="leadersMenuSender:" destination="9Vj-MI-BJa" eventType="touchUpInside" id="die-d4-kjT"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dyJ-Tv-Yyh">
+                                <rect key="frame" x="228" y="74" width="150" height="45"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sad-7B-dUb">
+                                        <rect key="frame" x="0.0" y="0.0" width="150" height="45"/>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ciT-HY-a0c">
+                                        <rect key="frame" x="95" y="12.666666666666671" width="20" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="20" id="MUa-19-MeD"/>
+                                            <constraint firstAttribute="height" constant="20" id="cMu-uT-DMa"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="30l-he-6dU">
+                                        <rect key="frame" x="46" y="10" width="44" height="25"/>
+                                        <fontDescription key="fontDescription" name="Sigmar-Regular" family="Sigmar" pointSize="15"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="ciT-HY-a0c" firstAttribute="leading" secondItem="30l-he-6dU" secondAttribute="trailing" constant="5" id="0iR-b3-Jya"/>
+                                    <constraint firstAttribute="width" constant="150" id="7Fo-Q7-wjt"/>
+                                    <constraint firstAttribute="height" constant="45" id="JOW-57-1dL"/>
+                                    <constraint firstAttribute="trailing" secondItem="ciT-HY-a0c" secondAttribute="trailing" constant="35" id="QX3-dH-uJi"/>
+                                    <constraint firstAttribute="bottom" secondItem="sad-7B-dUb" secondAttribute="bottom" id="Rku-JY-pCP"/>
+                                    <constraint firstAttribute="trailing" secondItem="sad-7B-dUb" secondAttribute="trailing" id="ao3-mr-3K7"/>
+                                    <constraint firstItem="sad-7B-dUb" firstAttribute="top" secondItem="dyJ-Tv-Yyh" secondAttribute="top" id="cXp-X5-Kne"/>
+                                    <constraint firstItem="30l-he-6dU" firstAttribute="centerY" secondItem="dyJ-Tv-Yyh" secondAttribute="centerY" id="iuK-xZ-fNe"/>
+                                    <constraint firstItem="sad-7B-dUb" firstAttribute="leading" secondItem="dyJ-Tv-Yyh" secondAttribute="leading" id="kHy-D2-f4R"/>
+                                    <constraint firstItem="ciT-HY-a0c" firstAttribute="centerY" secondItem="dyJ-Tv-Yyh" secondAttribute="centerY" id="mrc-hT-B8y"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="G3v-B9-h5a">
+                                <rect key="frame" x="15" y="144" width="363" height="480"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eha-ed-juP">
+                                        <rect key="frame" x="0.0" y="0.0" width="363" height="480"/>
+                                    </imageView>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="rM3-Q8-3Yl">
+                                        <rect key="frame" x="60" y="166" width="243" height="294"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="294" id="eUO-pm-FUg"/>
+                                        </constraints>
+                                    </tableView>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="eha-ed-juP" secondAttribute="trailing" id="7fw-Q7-xUD"/>
+                                    <constraint firstAttribute="bottom" secondItem="rM3-Q8-3Yl" secondAttribute="bottom" constant="20" id="9ir-2y-75d"/>
+                                    <constraint firstItem="rM3-Q8-3Yl" firstAttribute="leading" secondItem="G3v-B9-h5a" secondAttribute="leading" constant="60" id="E7z-ae-FRd"/>
+                                    <constraint firstAttribute="height" constant="480" id="WDz-wi-iZW"/>
+                                    <constraint firstAttribute="trailing" secondItem="rM3-Q8-3Yl" secondAttribute="trailing" constant="60" id="aES-wy-63V"/>
+                                    <constraint firstItem="eha-ed-juP" firstAttribute="leading" secondItem="G3v-B9-h5a" secondAttribute="leading" id="fVp-AD-WsN"/>
+                                    <constraint firstItem="eha-ed-juP" firstAttribute="top" secondItem="G3v-B9-h5a" secondAttribute="top" id="jy6-yx-RPr"/>
+                                    <constraint firstItem="rM3-Q8-3Yl" firstAttribute="centerX" secondItem="G3v-B9-h5a" secondAttribute="centerX" id="wI1-ru-88K"/>
+                                    <constraint firstAttribute="bottom" secondItem="eha-ed-juP" secondAttribute="bottom" id="yZ1-L9-cdd"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="tIC-nJ-ptG"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="HeL-yT-Blw" firstAttribute="top" secondItem="tIC-nJ-ptG" secondAttribute="top" constant="15" id="ILC-3o-lQL"/>
+                            <constraint firstItem="OD8-1z-mjs" firstAttribute="leading" secondItem="tIC-nJ-ptG" secondAttribute="leading" id="TUc-8t-JNd"/>
+                            <constraint firstItem="tIC-nJ-ptG" firstAttribute="trailing" secondItem="G3v-B9-h5a" secondAttribute="trailing" constant="15" id="YDN-Xs-wee"/>
+                            <constraint firstItem="tIC-nJ-ptG" firstAttribute="trailing" secondItem="dyJ-Tv-Yyh" secondAttribute="trailing" constant="15" id="aCm-N7-dxF"/>
+                            <constraint firstAttribute="bottom" secondItem="OD8-1z-mjs" secondAttribute="bottom" id="aaj-Q1-l0R"/>
+                            <constraint firstItem="dyJ-Tv-Yyh" firstAttribute="top" secondItem="tIC-nJ-ptG" secondAttribute="top" constant="15" id="ben-4s-lVi"/>
+                            <constraint firstItem="HeL-yT-Blw" firstAttribute="leading" secondItem="tIC-nJ-ptG" secondAttribute="leading" constant="25" id="dQc-3d-tSc"/>
+                            <constraint firstItem="OD8-1z-mjs" firstAttribute="top" secondItem="aZ5-sD-EfY" secondAttribute="top" id="e4H-V4-fc1"/>
+                            <constraint firstItem="G3v-B9-h5a" firstAttribute="leading" secondItem="tIC-nJ-ptG" secondAttribute="leading" constant="15" id="jXy-Tg-imI"/>
+                            <constraint firstItem="OD8-1z-mjs" firstAttribute="trailing" secondItem="tIC-nJ-ptG" secondAttribute="trailing" id="mK5-Di-fTS"/>
+                            <constraint firstItem="G3v-B9-h5a" firstAttribute="top" secondItem="dyJ-Tv-Yyh" secondAttribute="bottom" constant="25" id="uPy-ao-80H"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="coinImgView" destination="ciT-HY-a0c" id="m22-JP-BRS"/>
+                        <outlet property="coinsImgView" destination="sad-7B-dUb" id="zGA-Ig-c2L"/>
+                        <outlet property="leadersBgImgView" destination="OD8-1z-mjs" id="aPm-I6-r7c"/>
+                        <outlet property="leadersCoinsLbl" destination="30l-he-6dU" id="fnx-s4-c58"/>
+                        <outlet property="leadersImgView" destination="eha-ed-juP" id="tRQ-is-Edf"/>
+                        <outlet property="leadersMenuBtn" destination="HeL-yT-Blw" id="DcH-0X-sW3"/>
+                        <outlet property="leadersTableView" destination="rM3-Q8-3Yl" id="Dua-rP-L1r"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="g79-b0-I69" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1562.5954198473282" y="-2.1126760563380285"/>
         </scene>
     </scenes>
     <resources>
